* align should be text-align (forum.css, rtl.css) [Bug 3359]
git-svn-id: https://devel.simplemachines.org/code/smf/trunk@8192 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/default/css/forum.css
+++ b/Themes/default/css/forum.css
@@ -23,7 +23,7 @@ h3#newsfader
 #upshrink_ic
 {
 	margin-right: 2ex;
-	align: right;
+	text-align: right;
 }
 .categoryframe
 {
